# BeeLight

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  README.md  RELEASE.md
cad/: PCB.stp  (+6 more)
firmware/: .gitignore  CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf
firmware/.west/: config
firmware/app/: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf  west.yml  zigbee_config.hex  zigbee_config.yml
firmware/app/boards/: log_on_uart.conf  log_on_uart.overlay  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
firmware/app/config/: debug.conf  release.conf
firmware/app/misc/: astyle.cfg
firmware/app/patches/ncs-zigbee/: 0001-Add-BeeLight-specific-clusters.patch  0001-Add-cluster-for-IAQ-VOC-and-CO2.patch
firmware/app/patches/zephyr/: 0001-drivers-sensor-Add-support-for-Broadcom-APDS-9306.patch  0003-drivers-sensor-apds9306-fix-unchecked-return-value-c.patch  0004-Remove-reset-from-apds9306-driver.patch  0005-drivers-sensor-APDS9306-Add-lux-conversion.patch
firmware/app/scripts/: astyle_format_west_command.py  upload-config.py  west-commands.yml
firmware/app/src/: beelight.h  main.c
firmware/app/src/beelight/: beelight.h  beelight_bsec2.h  beelight_nobsec2.h
firmware/app/src/events/: Kconfig  events.c  events.h
firmware/app/src/sensors/: CMakeLists.txt  Kconfig  battery.c  environment.c  light.c
firmware/app/src/zigbee/: zb_zcl_iaq_cluster.h  zcl_iaq_measurement.c
firmware/app/sysbuild/: CMakeLists.txt
firmware/beelight/: west.yml
firmware/beelight/app/: CMakeLists.txt  Kconfig  west.yml
firmware/beelight/app/src/: main.c  main.withZigbee
firmware/beelight/boards/: debug.conf
firmware/beelight/zephyr/: module.yml
firmware/boards/: debug.conf  nrf5340dk_nrf5340_cpuapp.overlay
firmware/boards/arm/beelight_nrf5340/: Kconfig  Kconfig.board  beelight_nrf5340_cpuapp.dts  beelight_nrf5340_cpuapp_1.overlay  beelight_nrf5340_cpuapp_defconfig  beelight_nrf5340_cpuapp_ns.dts  beelight_nrf5340_cpuapp_ns_defconfig  beelight_nrf5340_cpunet-pinctrl.dtsi  beelight_nrf5340_cpunet.dts  beelight_nrf5340_cpunet_defconfig  beelight_nrf5340_cupuapp_common.dtsi  board.cmake
firmware/boards/kampi/beelight/: Kconfig  Kconfig.beelight  Kconfig.defconfig  beelight_nrf5340_cpuapp.dts  beelight_nrf5340_cpuapp.yaml  beelight_nrf5340_cpuapp_1.overlay  beelight_nrf5340_cpuapp_1_defconfig  beelight_nrf5340_cpuapp_defconfig  beelight_nrf5340_cpuapp_ns.dts  beelight_nrf5340_cpuapp_ns.yaml  beelight_nrf5340_cpuapp_ns_defconfig  beelight_nrf5340_cpunet-pinctrl.dtsi  beelight_nrf5340_cpunet.dts  beelight_nrf5340_cpunet.yaml  beelight_nrf5340_cpunet_defconfig  board.cmake  board.yml  nrf5340_cpuapp_common-pinctrl.dtsi  nrf5340_cpuapp_common.dtsi
firmware/drivers/sensor/: CMakeLists.txt  Kconfig
firmware/drivers/sensor/apds9306/: avago_apds9306.c
firmware/drivers/sensor/bme68x_iaq/: Kconfig  bosch_bme68x_iaq.c  (+1 more)
firmware/include/: zb_light_sensor.h
firmware/src/: beelight.h  main.c
firmware/src/events/: CMakeLists.txt  events.c  events.h
firmware/src/sensors/: CMakeLists.txt  battery.c  light.c  lightsensor.c  lightsensor.h
(+191 files in other folders)
